find_package(OpenCV REQUIRED)

                                                            ##################
                                                            #### MODULE 1 ####
                                                            ##################

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/1_assgReqRead/main.cpp)

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/1_assgShowPicture/main.cpp)
# target_link_libraries(currCppFile ${OpenCV_LIBS})

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/1_projWhoAmI/main.cpp)
# target_link_libraries(currCppFile ${OpenCV_LIBS})

                                                            ##################
                                                            #### MODULE 2 ####
                                                            ##################

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/2_assgPtrPractice1/problem2.cpp)

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/2_assgReqRead/main.cpp)

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/2_assgYourTurn/main.cpp)

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/2_projPointerMishMash/main.cpp)

                                                            ##################
                                                            #### MODULE 3 ####
                                                            ##################

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/3_assgCmdLineArgs/main.cpp)

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/3_assgshapesPart1/main.cpp)
# target_link_libraries(currCppFile ${OpenCV_LIBS})

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/3_projShapesPart2/main.cpp)
# target_link_libraries(currCppFile ${OpenCV_LIBS})

                                                            ##################
                                                            #### MODULE 4 ####
                                                            ##################

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/4_assgItemClass/main.cpp)

                                                            ##################
                                                            #### MODULE 5 ####
                                                            ##################

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/5_assgYourTurn/main.cpp)

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/5_projOptimalClassTime/main.cpp)

                                                            ##################
                                                            #### MODULE 6 ####
                                                            ##################

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/6_assgYourTurn/main.cpp)

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/6_assgWarmUp/ShapeFunStart.cpp)
# target_link_libraries(currCppFile ${OpenCV_LIBS})

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/6_assgDerivedClasses/main.cpp)


                                                            ##################
                                                            #### MODULE 7 ####
                                                            ##################

cmake_minimum_required(VERSION 3.31.3)
project(currCppFile)
add_executable(currCppFile src/7_assgYourTurn/main.cpp)

                                                            #################
                                                            #### MIDTERM ####
                                                            #################

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/6_midterm/cayson_midterm_q1.cpp)

# cmake_minimum_required(VERSION 3.31.3)
# project(currCppFile)
# add_executable(currCppFile src/6_midterm/cayson_midterm_q2.cpp)

                                                            ################
                                                            #### CONFIG ####
                                                            ################

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/)
